  Made the /f command user-friendly. Use it!
  Made the leyden jar much easier to charge
  TConstruct aluminum, ardite, and cobalt ores can be processed
  Added the /mutter command; shows a message above your head
  Barrels can store damaged items
  Made the parasieve cheaper
  Caliometric Burner, a new power source:
    Uses food to make steam
    Place next to a water boiler
    (Also renamed "Solar Boiler" to "Water Boiler" since it boils water, not solars.)
  Bug fixes:
    various recipes weren't crafting
    Servo texture
    Hopping barrel NPE
    Solar boiler sending steam upwards
    NEI recipe handlers


0.8.03
  Ported to 1.6.2
  Did some weeding:
    Bye-bye wand of cooling, inverium, craft packets
    BoH limited to 16 columns
  Bug fixes:
    battery item renderer
    Fixed item drop backlog breaking
  Tweaks:
    Servo inventory limited to 5 items; this might cause item loss, but that doesn't actually matter since they're creative-mode only (Still! Grrr.).
    Tons more grinder recipes

  Barrels: Rewritten.
    They can have any orientation; use some wrench to change it
    They can be filled from the back as well as the top
    Wood:
      They have to be crafted using a single type of wood.
      They will show what wood they were made out of. So you can have Oak Barrels, Eucalyptus Barrels...
      If there is no slab to go with a log, then a plank can be used instead.
    Now available in 6 delicious flavors:
      Normal: Same as the old barrel.
      Larger: 100% larger than normal barrels.
      Hopping: Acts like a hopper.
      Sticky: Leaves the last item.
      Silky: Keeps its contents. Break with an axe to prevent spills.
      Creative: Available in the creative menu; gives infinite items.
    The old barrels should hang around, but won't be craftable.
  
  Compression crafter: New!
    Variable-sized in-world crafting table.
    The internal area can be between 1x1 and 3x3